syntax = "proto3";

option csharp_namespace = "BiUM.Contract";

package bium;

import "google/protobuf/wrappers.proto";

message GrpcRequestMeta {
}

message GrpcEmptyResponse {
  GrpcResponseMeta Meta						= 1;
}

message GrpcResponseMeta {
  bool success								= 1;
  repeated GrpcResponseMessage messages		= 2;
}

message GrpcResponseMessage {
  google.protobuf.StringValue code			= 1;
  google.protobuf.StringValue message		= 2;
  google.protobuf.StringValue exception		= 3;
  int32 severity							= 4;
}

message GrpcIdNameMessage {
  google.protobuf.StringValue id			= 1;
  google.protobuf.StringValue name			= 2;
}